fix spacing

--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@
 h2 {
     text-align: center;
 }
+.display {
+    margin-bottom: 100px;
+}
+.header {
+    margin-bottom: 100px;
+}
